2011-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sfsfun-l.lisp: remove, move content to
	src/interp/sfsfun.boot, convert to Boot.
	src/interp/sfsfun.boot: Rename exported functions.
	src/algebra/mkfunc.spad.pamphlet,
	src/algebra/special.spad.pamphlet,
	src/algebra/sf.spad.pamphlet,
	src/algebra/gaussian.spad.pamphlet: Adjust.
	* src/interp/bits.lisp, src/interp/hash.lisp: remove,
	move content to src/interp/vmlisp.lisp.
	* src/interp/Makefile.in: Adjust
	* src/interp/sys-pkg.lisp: Drop package parts on exported
	symbols.
	* src/interp/bootfuns.lisp, src/interp/int-top.boot,
	src/interp/patches.lisp, src/interp/util.lisp,
	src/interp/g-util.boot, src/interp/g-boot.boot,
	src/interp/format.boot, src/interp/spad.lisp: Misc cleanups.


2011-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Fix 'reopen' problem
	in clisp.

2011-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Correct typo in previous commit.

2011-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac, config/var-def.mk, config/setup-dep.mk,
	src/aldor/Makefile2.in, src/aldor/Makefile3.in,
	*//Makefile.in: Change 'axiom' to 'fricas'.
	config/axiom.m4: Likewise, rename to config/fricas.m4.

2011-03-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add few more elliptic
	functions.

2011-03-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/laplace.spad.pamphlet: Handle few more
	functions.

2011-03-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*.spad.pamphlet: Use 'break' instead of 'leave'.

2011-03-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Fix Lisp reader initialization in CCL.

2011-03-23  Johannes Grabmeier <johannes@grabmeier.net>

	* src/algebra/coerce.spad.pamphlet: Add RetractableFrom.
	src/algebra/boo-cat.input, src/algebra/Makefile.in: Adjust.
	
2011-03-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
