@@ -1,3 +1,6 @@
+2011-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/union.lisp: Remove (was unused after prevoius change).
 2011-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/sfsfun-l.lisp: remove, move content to
@@ -9,6 +12,7 @@
 	src/algebra/gaussian.spad.pamphlet: Adjust.
 	* src/interp/bits.lisp, src/interp/hash.lisp: remove,
 	move content to src/interp/vmlisp.lisp.
+	* src/interp/union.lisp: move content to src/interp/vmlisp.lisp.
 	* src/interp/Makefile.in: Adjust
 	* src/interp/sys-pkg.lisp: Drop package parts on exported
 	symbols.
